// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateOne failing update should not update a field name if it is not synced correctly with label and labelSync is true 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_MUTATION_NOT_ALLOWED",
                "message": "Name is not synced with label.",
                "userFriendlyMessage": "Updated field name is not synced with label",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "newName",
              "objectMetadataId": Any<String>,
            },
            "status": "fail",
            "type": "update_field",
          },
        ],
        "index": [],
        "objectMetadata": [],
        "pageLayoutTab": [],
        "pageLayoutWidget": [],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidPageLayoutTab": 0,
        "invalidPageLayoutWidget": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating field",
    "name": "GraphQLError",
  },
]
`;

exports[`updateOne failing update should throw if the field name is not available because of other field with the same name 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "otherTestName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "otherTestName" is not available as it is already used by another field",
                "value": "otherTestName",
              },
              {
                "code": "FIELD_MUTATION_NOT_ALLOWED",
                "message": "Name is not synced with label.",
                "userFriendlyMessage": "Updated field name is not synced with label",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "otherTestName",
              "objectMetadataId": Any<String>,
            },
            "status": "fail",
            "type": "update_field",
          },
        ],
        "index": [],
        "objectMetadata": [],
        "pageLayoutTab": [],
        "pageLayoutWidget": [],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidPageLayoutTab": 0,
        "invalidPageLayoutWidget": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating field",
    "name": "GraphQLError",
  },
]
`;
